updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a process support specialist at White Labs. </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>A small town in Minnesota</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Horseback Riding, Aerial Silks and Knitting.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>One where I am challenged</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Linda Vista</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To better myself, and increase my value at my company.</p>
     </section>
 
     <footer id="footer">
